--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "fcm-node": "^1.4.0",
-    "jade": "~1.11.0",
     "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
+    "node-schedule": "^1.3.2",
     "pug": "2.0.0-beta11",
     "sequelize": "^5.3.5",
-    "node-schedule": "^1.3.2",
     "serve-favicon": "~2.4.5",
+    "update": "^0.7.4",
     "web3": "^1.0.0-beta.33"
   }
 }
