--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ethereumjs-tx": "^1.3.7",
     "express": "~4.15.5",
     "fcm-node": "^1.4.0",
     "http-errors": "~1.6.2",
